<resources>
    <string name="app_name">Basket Base</string>
    <string name="action_home">Inicio</string>
    <string name="action_calendar">Calendario</string>
    <string name="action_comenta">Comenta el partido</string>
    <string name="action_patro">Amigos de Basket Base</string>
    <string name="action_ofertas">Promociones</string>
    <string name="action_unirse">¿Quieres que tu club sea Basket Base?</string>
    <string name="action_colabora">¿Quieres colaborar con Basket Base?</string>
    <string name="action_ayuda">Ayuda</string>
    <string name="nombreMail">Club:</string>
    <string name="empresaMail">Empresa:</string>
    <string name="correoMail">Correo:</string>
    <string name="provinciaMail">Provincia:</string>
    <string name="localidadMail">Localidad:</string>
    <string name="personaMail">Persona de contacto:</string>
    <string name="telefonoMail">Teléfono de contacto:</string>
    <string name="textoMail">Texto:</string>
    <string name="enviarBoton">Enviar</string>
    <string name="textoInicio">Bienvenid@ a la app oficial de Basket Base. Le invitamos a disfrutar con nuestro contenido. Muchas gracias!!</string>
    <string name="continuar">Continuar</string>
    <string name="load">Cargando...</string>
    <string name="salir">Salir</string>
    <string name="conexionFallo">No hay conexión a Internet.</string>
    <string name="textoConexionFallo">Hemos detectado que tiene problemas con su conexión a Internet. Esta aplicación requiere de dicha conexión. Conéctese a una red disponible y vuelva a entrar en la App. Disculpe las molestias.</string>
</resources>
