<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item android:id="@+id/action_calendar"
        android:title="@string/action_calendar"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/action_patro"
        android:title="@string/action_patro"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/action_ofertas"
        android:title="@string/action_ofertas"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/action_unirse"
        android:title="@string/action_unirse"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/action_colabora"
        android:title="@string/action_colabora"
        android:orderInCategory="100"
        app:showAsAction="never" />
</menu>
