<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:layout_marginTop="10dp">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:id="@+id/textoIntro"
            android:background="@color/colorPrimary"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:text="@string/correoMail"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:background="@color/colorPrimary"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:inputType="textEmailAddress"
            android:id="@+id/correoMail"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:background="@drawable/edit_text_custom"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:id="@+id/textoNombre"
            android:text="@string/nombreMail"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:background="@color/colorPrimary"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:inputType="textPersonName"
            android:id="@+id/nombreMail"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:background="@drawable/edit_text_custom"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:text="@string/personaMail"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:background="@color/colorPrimary"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:inputType="textPersonName"
            android:id="@+id/personaMail"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:background="@drawable/edit_text_custom"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:text="@string/telefonoMail"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:background="@color/colorPrimary"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:inputType="number"
            android:id="@+id/telefonoMail"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:background="@drawable/edit_text_custom"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:text="@string/provinciaMail"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:background="@color/colorPrimary"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:inputType="textPersonName"
            android:id="@+id/provinciaMail"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:background="@drawable/edit_text_custom"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:text="@string/localidadMail"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:background="@color/colorPrimary"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:inputType="textPersonName"
            android:id="@+id/localidadMail"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:background="@drawable/edit_text_custom"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/textoMail"
            android:background="@color/colorPrimary"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:lines="7"
            android:id="@+id/textoMail"
            android:gravity="top"
            android:paddingStart="7dp"
            android:paddingEnd="7dp"
            android:background="@drawable/edit_text_custom"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@color/colorPrimary"
            android:id="@+id/enviarBoton"
            android:clickable="true"
            android:textColor="@android:color/white"
            android:text="@string/enviarBoton"/>
    </LinearLayout>
</ScrollView>